# cpp-design-patterns

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  backend-cpp-design-patterns.md
.githooks/: pre-commit
examples/abstract_factory/: CMakeLists.txt  main.cpp
examples/adapter/: CMakeLists.txt  main.cpp
examples/bounded_queue/: CMakeLists.txt  main.cpp
examples/bridge/: CMakeLists.txt  main.cpp
examples/command/: CMakeLists.txt  main.cpp
examples/common/: log.h
examples/composite/: CMakeLists.txt  main.cpp
examples/decorator/: CMakeLists.txt  main.cpp
examples/facade/: CMakeLists.txt  main.cpp
examples/factory_method/: CMakeLists.txt  main.cpp
examples/flyweight/: CMakeLists.txt  main.cpp
examples/futures_promises/: CMakeLists.txt  main.cpp
examples/nvi/: CMakeLists.txt  main.cpp
examples/observer/: CMakeLists.txt  main.cpp
examples/pimpl/: CMakeLists.txt  database_service.cpp  database_service.h  main.cpp
examples/proxy/: CMakeLists.txt  main.cpp
examples/raii/: CMakeLists.txt  main.cpp
examples/reactor/: CMakeLists.txt  main.cpp
examples/rule_of_0_5/: CMakeLists.txt  main.cpp
examples/smart_pointers/: CMakeLists.txt  main.cpp
examples/state/: CMakeLists.txt  main.cpp
examples/strategy/: CMakeLists.txt  main.cpp
examples/thread_pool/: CMakeLists.txt  main.cpp
examples/traits_tag_dispatch/: CMakeLists.txt  main.cpp
examples/type_erasure/: CMakeLists.txt  main.cpp
examples/visitor/: CMakeLists.txt  main.cpp
scripts/: format.sh
