cmake_minimum_required(VERSION 3.20)

project(cpp_backend_patterns_examples LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(examples/raii)
add_subdirectory(examples/smart_pointers)
add_subdirectory(examples/rule_of_0_5)
add_subdirectory(examples/thread_pool)
add_subdirectory(examples/bounded_queue)
add_subdirectory(examples/futures_promises)
add_subdirectory(examples/reactor)
add_subdirectory(examples/facade)
add_subdirectory(examples/adapter)
add_subdirectory(examples/strategy)
add_subdirectory(examples/factory_method)
add_subdirectory(examples/abstract_factory)
add_subdirectory(examples/proxy)
add_subdirectory(examples/decorator)
add_subdirectory(examples/type_erasure)
add_subdirectory(examples/observer)
add_subdirectory(examples/state)
add_subdirectory(examples/traits_tag_dispatch)
add_subdirectory(examples/bridge)
add_subdirectory(examples/composite)
add_subdirectory(examples/visitor)
